# fitbit-openapi

./: .env.example  .gitignore  Makefile  README.md  openapi.yaml  package-lock.json  package.json  pyproject.toml
components/: security.yaml
components/schemas/: active-zone-minutes-timeseries.yaml  activity.yaml  body.yaml  breathing-rate.yaml  cardio-fitness-score.yaml  common.yaml  devices.yaml  heartrate-timeseries.yaml  heartrate-variability.yaml  intraday.yaml  irregular-rhythm-notifications.yaml  nutrition.yaml  sleep.yaml  spo2.yaml  subscription.yaml  temperature.yaml
data/parsed/active-zone-minutes-timeseries/: get-azm-timeseries-by-date.json  get-azm-timeseries-by-interval.json
data/parsed/activity/: create-activity-goals.json  create-activity-log.json  create-favorite-activity.json  delete-activity-log.json  delete-favorite-activity.json  (+11 more)
data/parsed/activity-timeseries/: get-activity-timeseries-by-date-range.json  get-activity-timeseries-by-date.json
paths/: active-zone-minutes-timeseries.yaml  activity-timeseries.yaml  activity.yaml  authorization.yaml  blood-glucose.yaml  body-timeseries.yaml  body.yaml  breathing-rate.yaml  cardio-fitness-score.yaml  devices.yaml  electrocardiogram.yaml  friends.yaml  heartrate-timeseries.yaml  heartrate-variability.yaml  intraday.yaml  irregular-rhythm-notifications.yaml  nutrition-timeseries.yaml  nutrition.yaml  sleep.yaml  spo2.yaml  subscription.yaml  temperature.yaml  user.yaml
tools/fitbit_docs/: __init__.py  cli.py  config.py  crawler.py  generator.py  live.py  models.py  parser.py  paths.py
(+263 files in other folders)
